    bound to C+e , and C+e ..
  - Go to Parent Fold (C+e u): moves caret to fold with a higher level
    than the one containing the caret
  - Narrow to Fold (C+e n n): equivalent to invoking 'Select Fold', then
    'Narrow to Selection'
  - Narrow to Selection (C+e n s): this command is the same as before,
    but has a new shortcut

+ Enhancements

- C+LEFT/C+RIGHT are now more intelligent. Tell me if you like the new
  behavior.
- If there are more buttons in a docking area than can fit, a popup menu
  button is shown; clicking it shows a popup listing all dockables in
  that area
- Added option to disable file system browser's tool bar
- I/O errors are now batched into a single dialog box
- New, smaller icons in file system browser (Dirk Moebius)
- New jEdit window icon (Phillip Richdale)
- First item in File->Current Directory menu (the directory path itself)
  is no longer a grayed out label; you can invoke it to view the
  directory in the file system browser
- First item in 'Paste Previous' dialog pre-selected when dialog shown
- Focus is returned to file list in 'Close All' dialog box after one of
  the buttons are clicked
- Recent Directories menu, Browse System/User Macros commands, and other
  commands that open directories in the file system browser now work a
  little better
- The list of open files is now saved by the autosave task
- Smoother incremental search
- When HOME is pressed while there is a selection, the caret is moved to
  the beginning of the first selected line. END moves the caret to the
  end of the last selected line.
- Search bar automatically selects its contents as soon as it gets focus
- The file system browser's 'Search in Directory' command no longer
  hangs the event dispatch thread until the directory hierarchy has been
  listed
- If an error occurs while loading one of the files involved in a
  multi-file search, the search will continue; previously it would have