@@ -727,6 +727,7 @@ about.text=jEdit is brought to you by:\n\
 	Andre Kaplan\n\
 	Artur Biesiadowski\n\
 	Aziz Sharif\n\
+	Ben Glazer\n\
 	Bruno Tatibouet\n\
 	Calvin Yu\n\
 	Carlos Quiroz\n\
